4.2
	+ Update version to 4.2
4.1.1
	+ Escape parameters in calls to install/upgrade/remove packages CGIs
4.1
	+ Update installation slides
	+ Make EBox::Software::listUpgradablePkgs recover form file corruption
4.0
	+ New welcome page on first install
	+ Set version to 4.0
	+ New package selection page
	+ Update installation slides
	+ Installation steps moved from left to top
3.5
	+ Ignore transitional packages also in advanced view
	+ Added packages involved in a restart requirement after upgrade in
	  the event
	+ Set version to 3.5
3.4
	+ Don't expire session when first time menu is visible
	+ When there is no action defined for EBox::Software::CGI::InstallPkgs
	  throw a MissingArgument instead of an Internal exception
	+ Migrated to use Plack as the application server instead of mod_perl
	+ Remove useless initial-setup script
	+ Set version to 3.4
	+ Be able to update zentyal components when clicking select all checkbox
	+ Update install button when clicking select all checkbox
	+ Send an alert if a restart is required after performing an automatic
	  update with auto-updater
3.3
	+ Replace select/deselect all buttons with column checkbox
	+ Switch from Error to TryCatch for exception handling
	+ Updated installer slides
	+ Remove style in zentyal package list when sb is set as it is not
	  longer applied
	+ Remove restricted modules to get info
	+ Added missing EBox::Exceptions uses
	+ Set version to 3.3
3.2.1
	+ Check for 3.2 archive repository instead of 3.1
3.2
	+ Set version to 3.2
3.1.5
	+ Fixed regression in Update list button in Components page
3.1.4
	+ Hide transitional zentyal-ids package
3.1.3
	+ Updated slides texts and images
	+ Move package icons from software to core as required for the menu
	+ Adapted to new CSS styles
	+ Fixed regressions in components page behavior after jQuery migration
3.1.2
	+ Reset checkboxes in advanced packages section; this is need for
	  some browsers which autocompletes input by position
	+ Added menu icon