@@ -1,3 +1,5 @@
+HEAD
+	+ Proper check of QA updates after migration from old to new license
 4.2
 	+ Update version to 4.2
 4.1.1
